cloudFormation/control/control-agent.yaml
# control-agent.yaml

AWSTemplateFormatVersion: '2010-09-09'
Description: Control Account - K3s Control Plane Only

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: SSH KeyPair for EC2 login

Resources:

  ControlVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.100.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: control-vpc
        - Key: Environment
          Value: control
        - Key: ManagedBy
          Value: CloudFormation
        - Key: Project
          Value: illsang-infra

  ControlPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ControlVPC
      CidrBlock: 10.100.1.0/24
      AvailabilityZone: ap-northeast-2a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: control-public-subnet
        - Key: Environment
          Value: control
        - Key: ManagedBy
          Value: CloudFormation
        - Key: Project
          Value: illsang-infra

  ControlInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: control-igw
        - Key: Environment
          Value: control
        - Key: ManagedBy
          Value: CloudFormation
        - Key: Project
          Value: illsang-infra

  ControlAttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ControlVPC
      InternetGatewayId: !Ref ControlInternetGateway

  ControlRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ControlVPC
      Tags:
        - Key: Name
          Value: control-rtb
        - Key: Environment
          Value: control
        - Key: ManagedBy
          Value: CloudFormation
        - Key: Project
          Value: illsang-infra

  ControlRoute:
    Type: AWS::EC2::Route
    DependsOn: ControlAttachIGW
    Properties:
      RouteTableId: !Ref ControlRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref ControlInternetGateway

  ControlSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ControlPublicSubnet
      RouteTableId: !Ref ControlRouteTable

  ControlSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Control Plane Security Group
      VpcId: !Ref ControlVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: control-sg
        - Key: Environment
          Value: control
        - Key: ManagedBy
          Value: CloudFormation
        - Key: Project
          Value: illsang-infra

  ControlEIP:
    Type: AWS::EC2::EIP

  ControlInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: !Sub '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2}}'
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref ControlPublicSubnet
          GroupSet:
            - !Ref ControlSG
      Tags:
        - Key: Name
          Value: k3s-control-plane
        - Key: Environment
          Value: control
        - Key: ManagedBy
          Value: CloudFormation
        - Key: Project
          Value: illsang-infra
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          set -ex
          fallocate -l 1G /swapfile
          chmod 600 /swapfile
          mkswap /swapfile
          swapon /swapfile
          echo '/swapfile none swap sw 0 0' >> /etc/fstab
          timedatectl set-timezone Asia/Seoul
          sudo -i
          sudo yum update -y
          sudo yum install -y git
          git clone https://github.com/TeamFair/illsang-infra.git

  ControlEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt ControlEIP.AllocationId
      InstanceId: !Ref ControlInstance

Outputs:
  ControlPlaneIP:
    Value: !Ref ControlEIP
    Description: Public IP of the K3s Control Plane
